<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp">


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:padding="5dp"
                android:src="@drawable/back" />

            <TextView
                style="@style/noah_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnBack"
                android:gravity="center"
                android:text="@string/add_review" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:layout_weight="4.5">

            <TextView
                style="@style/noah_medium_Extra_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_your_feedback" />


            <androidx.cardview.widget.CardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/_15sdp"
                android:elevation="1dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:background="@drawable/card_background">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/tell_us_what_you_think"
                        style="@style/noah_light_medium"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/noah_medium_Extra_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/how_would_you_rate_your_order_n_expirence" />


            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="40dp"
                android:layout_marginTop="@dimen/_40sdp"
                android:minHeight="40dp"
                android:layout_gravity="center"
                android:numStars="5"
                app:mrb_progressTint="@color/ratingBarColor"
                android:progressBackgroundTint="@color/searchBackgroundColor"
                style="@style/Widget.MaterialRatingBar.RatingBar" />


            <androidx.cardview.widget.CardView
                android:id="@+id/btnGuest"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:elevation="1dp"
                app:cardCornerRadius="@dimen/_7sdp"
                app:cardElevation="1dp"
                app:cardMaxElevation="1dp">

                <TextView
                    style="@style/noah_light_white_medium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_gredient"
                    android:gravity="center"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/submit" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>



    </LinearLayout>
</layout>