<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/zues_bg">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_110sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/no"
            android:src="@drawable/zues_logo_white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imgLogo"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/shape_top_round_fill_white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnGuest"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="50dp"
                        android:elevation="1dp"
                        app:cardCornerRadius="@dimen/_7sdp"
                        app:cardElevation="1dp"
                        app:cardMaxElevation="1dp">

                        <TextView
                            style="@style/noah_light_white_medium"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_gredient"
                            android:gravity="center"
                            android:padding="@dimen/_7sdp"
                            android:text="@string/guest_login" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_22sdp"
                        android:elevation="1dp"
                        app:cardCornerRadius="@dimen/_7sdp"
                        app:cardElevation="1dp"
                        app:cardMaxElevation="1dp">

                        <TextView
                            style="@style/noah_light_white_medium"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_gredient"
                            android:gravity="center"
                            android:padding="@dimen/_7sdp"
                            android:text="@string/login" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/noah_medium_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_have_an_account" />

                        <TextView
                            android:id="@+id/login"
                            style="@style/noah_secondary_bold_medium_dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="Log In"
                            android:textColor="@color/upperGredient" />

                    </LinearLayout>


                </LinearLayout>


            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>

</layout>