<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/zues_bg">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_90sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/no"
            android:src="@drawable/zues_logo_white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imgLogo"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/shape_top_round_fill_white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_marginTop="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_otp"
                        style="@style/noah_dark"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_enter_the_otp_sent_to_your_mobile_number"
                        android:layout_marginTop="20sp"
                        style="@style/noah_light_large"/>

                    <com.chaos.view.PinView
                        android:id="@+id/pinView"
                        style="@style/PinWidget.PinView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_22sdp"
                        android:layout_marginBottom="@dimen/_22sdp"
                        android:cursorVisible="true"
                        android:inputType="number"
                        android:itemBackground="@color/white"
                        app:cursorColor="@color/black"
                        app:hideLineWhenFilled="false"
                        app:itemCount="7"
                        app:itemHeight="50dp"
                        app:itemRadius="8dp"
                        app:itemWidth="50dp"
                        app:lineColor="@color/colorBlack"
                        app:lineWidth="1dp" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnVerify"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="15dp"
                        android:elevation="1dp"
                        app:cardCornerRadius="@dimen/_7sdp"
                        app:cardElevation="1dp"
                        app:cardMaxElevation="1dp">

                        <TextView
                            style="@style/noah_light_white_medium"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_gredient"
                            android:gravity="center"
                            android:padding="@dimen/_7sdp"
                            android:text="@string/verify" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/resentOtp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Resend OTP?"
                        android:layout_marginTop="@dimen/_22sdp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        style="@style/noah_regular_medium"/>

                </LinearLayout>


            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>

</layout>