<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:src="@drawable/back" />


            <ImageView
                android:id="@+id/btnNotification"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:padding="5dp"
                android:src="@drawable/notification" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/location" />


            <TextView
                style="@style/ubuntu_medium_Extra_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/find_resturants_and_n_shops_near_you" />

            <TextView
                style="@style/secondary_regular_extra_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/we_will_need_your_location_to_give_you_better_expirence" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btnGuest"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                android:elevation="1dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="1dp">

                <TextView
                    style="@style/ubuntu_light_white_medium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_gredient"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/allow_location" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/ubuntu_medium_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="Enter my location"
                android:textColor="@color/upperGredient" />

        </LinearLayout>


    </LinearLayout>
</layout>