<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:src="@drawable/back" />


            <ImageView
                android:id="@+id/btnNotification"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:padding="5dp"
                android:src="@drawable/notification" />

            <TextView
                style="@style/noah_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnNotification"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/rate_our_app" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="4.5"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rate_app" />


            <TextView
                style="@style/noah_medium_Extra_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/how_would_you_rate_our_app_n_expirence" />


            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:maxHeight="40dp"
                android:minHeight="40dp"
                android:numStars="5"
                android:progressBackgroundTint="@color/searchBackgroundColor"
                app:mrb_progressTint="@color/ratingBarColor" />


            <androidx.cardview.widget.CardView
                android:id="@+id/btnGuest"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:elevation="1dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="1dp">

                <TextView
                    style="@style/noah_light_white_medium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_gredient"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/submit" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</layout>